test even more stuff

--- a/c-from-cpp/Makefile
+++ b/c-from-cpp/Makefile
@@ -1,17 +1,18 @@
 .POSIX:
-.PHONY: run clean
 
-main.out: main.o c.o
+.PHONY: clean run test
+
+main.out: main.o notmain.o
 	g++ -o '$@' $^
-
-c.o: c.c
-	gcc -c -g -o '$@' -std=c89 -Wall -Wextra -pedantic-errors '$<'
 
 main.o: main.cpp
 	g++ -c -g -o '$@' -std=c++98 -Wall -Wextra -pedantic-errors '$<'
 
-run: main.out
-	./main.out
+notmain.o: notmain.c
+	gcc -c -g -o '$@' -std=c89 -Wall -Wextra -pedantic-errors '$<'
 
 clean:
 	rm -f *.o *.out
+
+test: main.out
+	./main.out
