--- a/cpp-from-c/Makefile
+++ b/cpp-from-c/Makefile
@@ -1,17 +1,18 @@
 .POSIX:
+
 .PHONY: run clean
 
-main.out: main.o cpp.o
+main.out: main.o notmain.o
 	g++ -o '$@' $^
 
-cpp.o: cpp.cpp
+notmain.o: notmain.cpp
 	g++ -c -g -o '$@' -pedantic-errors -std=c++98 -Wall -Wextra '$<'
 
 main.o: main.c
 	gcc -c -g -o '$@' -pedantic-errors -std=c89 -Wall -Wextra '$<'
 
-run: main.out
-	./main.out
-
 clean:
 	rm -f *.o *.out
+
+test: main.out
+	./main.out
