cmake: hello world example

--- a/cmake/multi_file/CMakeLists.txt
+++ b/cmake/multi_file/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required(VERSION _3.0)
+project(ProjectName)
+cmake_minimum_required(VERSION 3.0)
 file(GLOB SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "*.c")
 add_executable(main ${SOURCES})
