--- a/make/templates/c_many/Makefile
+++ b/make/templates/c_many/Makefile
@@ -4,19 +4,27 @@
 CC = gcc
 CFLGS = -ggdb3 -O0 -pedantic-errors -std=c99 -Wall -Wextra
 IN_EXT = .c
+OUT_DIR = .
 OUT_EXT = .out
 
-OUTS = $(addsuffix $(OUT_EXT), $(basename $(wildcard *$(IN_EXT))))
+OUTS = $(addprefix $(OUT_DIR)/, $(addsuffix $(OUT_EXT), $(basename $(wildcard *$(IN_EXT)))))
 
-.PHONY: all clean test
+.PHONY: all clean mkdir test
 
-all: $(OUTS)
+all: mkdir $(OUTS)
 
-%$(OUT_EXT): %$(IN_EXT)
+$(OUT_DIR)/%$(OUT_EXT): %$(IN_EXT)
 	$(CC) $(CFLGS) -o '$@' '$<'
 
 clean:
-	rm -f *'$(OUT_EXT)'
+	if [ '$(OUT_DIR)' = '.' ]; then \
+	  rm -f *'$(OUT_EXT)'; \
+	else \
+	  rm -rf '$(OUT_DIR)'; \
+	fi
+
+mkdir:
+	mkdir -p '$(OUT_DIR)'
 
 test: all
 	@\
